--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <h1><%= text1 %></h1>
+    <p><%= text2 %></p>
   </body>
 </html>
