--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,6 @@
   <body>
     <h1><%= text1 %></h1>
     <p><%= text2 %></p>
+    <p><a href="/quizes/question">Comience a jugar</a></p>
   </body>
 </html>
