--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= text1 %></h1>
-    <p><%= text2 %></p>
-    <p><a href="/quizes/question">Comience a jugar</a></p>
+    <h3>Bienvenido a <%= title %></h3>
+    El portal donde podrá crear sus propios juegos!
   </body>
 </html>
