--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -2,9 +2,12 @@
 <head>
 	<meta charset="utf-8">
 	<title>Quiz</title>
-	<link rel="stylesheet" type="text/css" href="/stylesheet/styles.css">
+	<link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
+	<link rel="stylesheet" type="text/css" href="/stylesheets/wide.css" media='only screen and (min-width: 530px) and (min-device-width: 481px)'>
+	<link rel="stylesheet" type="text/css" href="/stylesheets/smartphone.css" media='only screen and (max-width: 480px)'>
 </head>
 <body>
-	<label>La respuesta es: <%= answer %></label>
+	<p><%= answer %></p>
+	<a href="/quizes/question">Intentelo otra vez</a>
 </body>
 </html>
