--- a/views/quizes/question.ejs
+++ b/views/quizes/question.ejs
@@ -2,7 +2,9 @@
 <head>
 	<meta charset="utf-8">
 	<title>Quiz</title>
-	<link rel="stylesheet" type="text/css" href="/stylesheet/styles.css">
+	<link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
+	<link rel="stylesheet" type="text/css" href="/stylesheets/wide.css" media='only screen and (min-width: 530px) and (min-device-width: 481px)'>
+	<link rel="stylesheet" type="text/css" href="/stylesheets/smartphone.css" media='only screen and (max-width: 480px)'>
 </head>
 <body>
 	<h2>Quiz: El juego de las preguntas</h2>
