--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,6 +25,9 @@
 			<a href="https://es.wikipedia.org/wiki/Quiz">
 				¿Que es un Quiz?
 			</a>
+			<a href="https://github.com/jorgerod/quiz">
+				Github: Jorge Rodriguez
+			</a>
 		</footer>
 	</div>
 </body>
