--- a/views/author.ejs
+++ b/views/author.ejs
@@ -4,6 +4,12 @@
 </head>
 <body>
 	<label>Autor: <%= author %></label>
-	<img src="https://pbs.twimg.com/profile_images/378800000451012500/4628fbb9dc70514d389ed9491243866f_400x400.png">
+	<br/>
+	<div id="left_col">
+		<img src="https://pbs.twimg.com/profile_images/378800000451012500/4628fbb9dc70514d389ed9491243866f_400x400.png" style="width: 40%">
+	</div>
+	<div  id="right_col">
+		<iframe style="width: 100%" src="https://www.youtube.com/embed/c3vtLSCfaJ8" frameborder="0" allowfullscreen></iframe>
+	</div>
 </body>
 </html>
