anado varias preguntas

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,4 +8,7 @@
     <h3>Bienvenido a <%= title %></h3>
     El portal donde podrá crear sus propios juegos!
   </body>
+  <table>
+  	
+  </table>
 </html>
