--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -8,6 +8,6 @@
 </head>
 <body>
 	<p><%= answer %></p>
-	<a href="/quizes/question">Intentelo otra vez</a>
+	<a href="/quizes/<%= quiz.id %>">Volver</a>
 </body>
 </html>
