--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -7,11 +7,9 @@
 	<link rel="stylesheet" type="text/css" href="/stylesheets/smartphone.css" media='only screen and (max-width: 480px)'>
 </head>
 <body>
-	<h2>Quiz: El juego de las preguntas</h2>
-
-	<form method="get" action="/quizes/<%= quiz.id %>">
-		<label>Pregunta: <%= question %></label>
-		<input name="answer" type="text" value="Responda aqui">
+	<form method="get" action="/quizes/<%= quiz.id %>/answer">
+		<label>Pregunta: <%= quiz.pregunta %></label>
+		<input name="answer" type="text">
 		<input type="submit" value="Enviar">
 	</form>
 </body>
