--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,10 @@
   <body>
     <h3>Bienvenido a <%= title %></h3>
     El portal donde podrá crear sus propios juegos!
+    <form action="/quizes" method="get">
+      <input name="search" type="text" >
+      <input type="submit" value="Buscar">
+    </form>
   </body>
   <table>
   	
